changed to scss syntax

--- a/gulpfile.js/config.json
+++ b/gulpfile.js/config.json
@@ -12,13 +12,13 @@
     },
 
     "css": {
-      "src": "css",
+      "src": "scss",
       "dest": "css",
       "autoprefixer": {
         "browsers": ["last 3 versions"]
       },
       "sass": {
-        "indentedSyntax": true
+        "indentedSyntax": false
       },
       "extensions": ["sass", "scss", "css"]
     },
