--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "@frctl/fractal": "^1.0.8",
+    "@frctl/twig": "^1.0.0-alpha.0",
     "fs": "^0.0.1-security",
     "gulp-notify": "^2.2.0"
   }
