Added font sync to build folder

--- a/config.json
+++ b/config.json
@@ -35,6 +35,12 @@
       "extensions": ["sass", "scss", "css"]
     },
 
+    "fonts": {
+      "src": "fonts",
+      "dest": "fonts",
+      "extensions": ["woff2", "woff", "eot", "ttf", "svg"]
+    },
+
     "icons": {
       "src": "icons",
       "dest": "./views/sprite",
