--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-combine-mq": "^0.4.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-sequence": "^0.4.6",
