Added initial README file for each src task

--- a/config.json
+++ b/config.json
@@ -22,6 +22,11 @@
       }
     },
 
+    "static": {
+      "src": "static",
+      "dest": "./"
+    },
+
     "css": {
       "src": "scss",
       "dest": "css",
