--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-svg-sprite": "^1.3.6",
     "gulp-watch": "^4.3.10",
     "lodash": "^4.17.1",
+    "lodash.merge": "^4.6.0",
     "require-dir": "^0.3.1",
     "webpack": "^1.13.3"
   },
