Added js with babel & webpack

--- a/config.json
+++ b/config.json
@@ -15,14 +15,13 @@
       "components": "views",
       "docs": "docs",
       "static": "build"
+    },
+    "syncOptions": {
+     "open": true,
+     "notify": true
     }
   },
   "tasks": {
-    "browserSync": {
-      "server": {
-        "baseDir": "build"
-      }
-    },
     "static": {
       "src": "static",
       "dest": "./"
