--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "gulp": "gulp"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-1": "^6.16.0",
     "browser-sync": "^2.17.6",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
@@ -20,6 +24,7 @@
     "gulp-sourcemaps": "^2.2.0",
     "gulp-svg-sprite": "^1.3.6",
     "gulp-watch": "^4.3.10",
+    "gulp-webpack": "^1.5.0",
     "lodash": "^4.17.1",
     "lodash.merge": "^4.6.0",
     "require-dir": "^0.3.1",
