--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "gulp": "gulp"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@frctl/fractal": "^1.0.11",
+    "@frctl/mandelbrot": "^1.0.7",
+    "@frctl/twig": "^1.0.0-beta.1",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
@@ -29,11 +32,6 @@
     "lodash.merge": "^4.6.0",
     "require-dir": "^0.3.1",
     "webpack": "^1.13.3"
-  },
-  "dependencies": {
-    "@frctl/fractal": "^1.0.11",
-    "@frctl/mandelbrot": "^1.0.7",
-    "@frctl/twig": "^1.0.0-beta.1"
   },
   "license": "MIT"
 }
