--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "gulp-sourcemaps": "^2.2.0",
     "gulp-svg-sprite": "^1.3.6",
     "gulp-watch": "^4.3.10",
-    "gulp-webpack": "^1.5.0",
     "lodash": "^4.17.1",
     "lodash.merge": "^4.6.0",
     "require-dir": "^0.3.1",
-    "webpack": "^1.13.3"
+    "webpack-stream": "^3.2.0"
   },
   "license": "MIT"
 }
