Added nunjucks as option Added template extension as option

--- a/config.json
+++ b/config.json
@@ -11,6 +11,8 @@
     "project": {
       "title": "Spacecraft"
     },
+    "templateEngine": "twig",
+    "templateExtension": ".twig",
     "path": {
       "components": "views",
       "docs": "docs",
