Added production script

--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
   "root": {
     "path": "./",
     "src": "src",
-    "dest": "build"
+    "dest": "build",
+    "production": "production"
   },
   "production" : {
     "rev": true
