--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.1",
     "lodash.merge": "^4.6.0",
     "require-dir": "^0.3.1",
+    "webpack": "^1.13.3",
     "webpack-stream": "^3.2.0"
   }
 }
