Including template engine settings in config, e.g. Including and extending non-component view templates: https://github.com/frctl/nunjucks#user-content-including-and-extending-non-component-view-templates

--- a/_config.json
+++ b/_config.json
@@ -22,6 +22,7 @@
      "notify": true
     },
     "templateEngine": "twig",
+    "templateSettings":{},
     "templateExtension": ".twig",
     "themeSettings": {
       "skin": "black"
