Added possibility to watch and generate css from multiple sources

--- a/_config.json
+++ b/_config.json
@@ -30,7 +30,7 @@
   },
   "tasks": {
     "css": {
-      "src": "scss",
+      "src": ["scss", "views"],
       "dest": "css",
       "autoprefixer": {
         "browsers": ["last 3 versions"]
