--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "spacecraft",
-  "version": "0.1.21",
+  "version": "0.1.23",
   "description": "",
-  "license": "",
+  "license": "UNLICENSED",
   "author": "Whitespace AB <info@whitespace.se> (https://whitespace.se/)",
   "repository": {
     "type": "git",
@@ -16,14 +16,14 @@
     "@frctl/mandelbrot": "^1.1.0",
     "@frctl/nunjucks": "^1.0.3",
     "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.18.12",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-changed": "^2.0.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-changed": "^3.1.0",
     "gulp-combine-mq": "^0.4.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
@@ -32,11 +32,11 @@
     "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-svg-sprite": "^1.3.6",
+    "gulp-svg-sprite": "^1.3.7",
     "gulp-watch": "^4.3.11",
     "lodash": "^4.17.4",
     "lodash.merge": "^4.6.0",
-    "require-dir": "^0.3.1",
+    "require-dir": "^0.3.2",
     "spacecraft-twig": "git+ssh://git@bitbucket.org:whitespace_se/spacecraft-twig.git#0.1.20",
     "webpack": "^2.4.1",
     "webpack-stream": "^3.2.0"
