--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
   },
   "dependencies": {
     "@frctl/fractal": "^1.1.7",
-    "@frctl/mandelbrot": "^1.2.0",
-    "@frctl/nunjucks": "^1.0.3",
+    "@frctl/mandelbrot": "^1.2.1",
+    "@frctl/nunjucks": "^2.0.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.6.0",
-    "browser-sync": "^2.18.13",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-changed": "^3.1.0",
+    "browser-sync": "^2.26.7",
+    "del": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.0",
+    "gulp-changed": "^4.0.1",
     "gulp-combine-mq": "^0.4.0",
     "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.2.0",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.1.0",
     "gulp-notify": "^3.0.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sequence": "^0.4.6",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-sass": "4.0.2",
+    "gulp-sequence": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.3.7",
-    "gulp-watch": "^4.3.11",
-    "lodash": "^4.17.4",
-    "lodash.merge": "^4.6.0",
-    "require-dir": "^0.3.2",
+    "gulp-watch": "^5.0.1",
+    "lodash": "^4.17.15",
+    "lodash.merge": "^4.6.2",
+    "require-dir": "^1.2.0",
     "spacecraft-twig": "git+ssh://git@bitbucket.org:whitespace_se/spacecraft-twig.git#0.3.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack": "^3.5.5",
-    "webpack-stream": "^4.0.0",
-    "yargs": "^9.0.1"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.39.2",
+    "webpack-stream": "^5.2.1",
+    "yargs": "^14.0.0"
   }
 }
